--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+h1, h2 {
+    font-size: 22px !important;
+}
 .content{
     width: auto;
     height: auto;
@@ -29,6 +32,7 @@
     text-decoration: none;
     display: inline;
     padding: 0px 40px;
+    font-size: 20px;
 }
 
 .header_menu li a{
@@ -44,10 +48,9 @@
     transition: .5s all;
 }
 
-.nav_alredy {
-    color: rgb(31, 0, 206) !important;
-    transition: .5s all;
-    
+.nav_already {
+    color: black !important;
+    cursor: default;
 }
 
 .content_body{
@@ -61,6 +64,7 @@
     padding: 30px 0px;
     font-family: 'Montserrat', sans-serif;
     color: black;
+    font-size: 20px;
 }
 
 .about_me_photo{
@@ -106,4 +110,51 @@
 
 .about li span{
     font-weight: 600;
+}
+
+.evaluations{
+    width: 100%;
+    max-width: 900px;
+    margin: 2% auto;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.evaluations_table{
+    width: 100%;
+    max-width: auto;
+    margin: auto;
+    border-collapse: collapse;
+}
+
+.evaluations_table th{
+    border: 1px solid;
+    color: black;
+}
+
+.evaluations_table td{
+    border: 1px solid;
+    color: black;
+}
+
+.button{
+    cursor: pointer;
+    border-radius: 20px;
+    font-size: 22px;
+}
+
+.evaluations_green{
+    background-color: #c4efaa;
+}
+
+.evaluations_red{
+    background-color: #fe9d94;
+}
+
+#btn1{
+    color: rgb(202, 12, 12);
+}
+
+#btn2{
+    color: black;
 }
